fix student drop down overflow

--- a/frontend/style/drop_down.scss
+++ b/frontend/style/drop_down.scss
@@ -37,6 +37,7 @@
   background-color: #79cedc !important;
   border-radius: 2px !important;
   padding: 1px !important;
+  overflow-y: scroll !important;
 }
 
 .drop-down-container section ul {
